--- a/src/global/scss/base/_forms.scss
+++ b/src/global/scss/base/_forms.scss
@@ -6,6 +6,9 @@ form {
 	&.inline {
 		display: inline-flex;
 		align-items: center;
+		height: auto;
+		min-height: 5ch;
+		max-height: 30ch;
 	}
 }
 
@@ -25,7 +28,7 @@ legend {
 label {
 	display: block;
 	font-weight: 500;
-	font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+	font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
 	font-variant-caps: all-small-caps;
 	// margin-bottom: $small-spacing * 0.5;
 }
@@ -34,18 +37,18 @@ textarea {
 	resize: vertical;
 }
 
-[type='checkbox'],
-[type='radio'] {
+[type="checkbox"],
+[type="radio"] {
 	display: inline;
 	font-family: initial;
 	margin-right: $small-spacing * 0.5;
 }
 
-[type='file'] {
+[type="file"] {
 	margin-bottom: $small-spacing;
 	width: 100%;
 }
-input:not([type='range']):not([type='checkbox']) {
+input:not([type="range"]):not([type="checkbox"]) {
 	appearance: none;
 	background: transparent;
 	border: none;
@@ -56,71 +59,89 @@ input:not([type='range']):not([type='checkbox']) {
 	font-family: var(--base-font);
 	letter-spacing: -0.02rem;
 	font-size: 100% !important;
+	border-radius: var(--md-radius);
 }
-input[type='search']::-webkit-search-decoration,
-input[type='search']::-webkit-search-cancel-button,
-input[type='search']::-webkit-search-results-button,
-input[type='search']::-webkit-search-results-decoration {
+input[type="search"]::-webkit-search-decoration,
+input[type="search"]::-webkit-search-cancel-button,
+input[type="search"]::-webkit-search-results-button,
+input[type="search"]::-webkit-search-results-decoration {
 	display: none;
 }
 
 .input,
-input[type='search'] {
-	-webkit-appearance: none;
-	// background: #1d242e;
-	color: #fff;
-	border: 0.0625rem solid rgba(170, 170, 170, 0.219);
-
-	-moz-appearance: none;
-
+input[type="search"] {
+	// background-color: #e3dbf598 !important;
 	min-width: 15ch;
 	max-width: 30ch;
-	transition: color cubic-bezier(0.455, 0.03, 0.515, 0.955) 0.1s;
-	&:focus-within ::placeholder {
+	height: auto;
+	min-height: 5ch;
+	max-height: 30ch;
+
+	transition: all cubic-bezier(0.47, 0, 0.745, 0.715) 0.1s;
+	font-weight: 500;
+	&:active,
+	&:focus-within,
+	+ .searchBtn {
+		// background: #262e38;
+		// background-color: #e0e0e0d2 !important;
+		//  {
+		// 	background-color: #ecececce !important;
+		// }
+	}
+	::placeholder {
+		// color: #131313;
+		font-weight: 500;
 	}
 }
 .input {
 	display: grid;
 	grid-template-columns: 1fr 31px;
-	grid-template-areas: 'start end';
+	grid-template-areas: "start end";
 	position: relative;
-	background-color: transparent;
 	border: 0.0625rem solid hsla(0, 0%, 66.7%, 0.219);
-	border-radius: 0.2em;
-	box-shadow: inset 0.1125em -0.1125em 1em 0.5em hsla(0, 0%, 96.9%, 0.014),
-		0 0 0.25em 0.02em hsla(0, 0%, 66.7%, 0) !important;
+	border-radius: var(--md-radius);
+	box-shadow: inset 0.1125em -0.1125em 1em 0.5em hsla(0, 0%, 96.9%, 0.014), 0 0 0.25em 0.02em hsla(0, 0%, 66.7%, 0) !important;
 	transition: all 0.1s cubic-bezier(0.47, 0.25, 0.745, 0.715);
 	width: 100%;
+	height: auto;
+	min-height: 5ch;
+	max-height: 30ch;
+
 	&:active,
 	&:focus-within {
 		// background: #262e38;
-		background-color: #ffffff27 !important;
-
-		transition: all cubic-bezier(0.47, 0, 0.745, 0.715) 0.1s;
+		// background-color: #e2e2e2 !important;
+		filter: brightness(1.5);
 	}
 }
-input :not([type='range']) :not([type='checkbox']) {
+input :not([type="range"]) :not([type="checkbox"]) {
 	border: 0.0625rem solid rgba(170, 170, 170, 0.219);
 	font-family: inherit;
 	width: auto;
 	height: auto;
-	font-size: 1.25em;
+	// font-size: 1.25em;
+	border-radius: inherit;
 }
 .searchBtn {
 	pointer-events: all;
 	cursor: pointer;
 	z-index: 5;
-	/* width: 1rem; */
-	/* height: 1rem; */
 	display: flex;
-	align-content: center;
-	align-self: center;
-	padding: 1.566666ch;
-	/* margin-right: .5rem; */
+	align-items: center;
+	justify-content: center;
+	/* padding: 1.566666ch; */
 	justify-self: center;
+	// height: 100%;
+	width: 100%;
 	z-index: 10;
 	color: inherit;
-	/* right: 0; */
-	/* top: 0; */
+	transition: all 0.1s cubic-bezier(0.47, 0, 0.745, 0.715);
 	grid-area: end;
+	background-clip: content-box;
+	border-radius: inherit;
+}
+
+:root .light .input input ::placeholder {
+	color: #131313;
+	font-weight: 500;
 }
