[feat] Adding carousel 'see more' links Testing SEO Testing a way to get around SSR + Audio() conflict

--- a/src/global/scss/components/_carousel-item.scss
+++ b/src/global/scss/components/_carousel-item.scss
@@ -114,6 +114,7 @@ section.item {
 			height: auto;
 			aspect-ratio: inherit;
 			position: absolute;
+			object-fit: contain;
 			// border-radius: var(--xs-radius);
 			min-width: 100%;
 			top: 0;
