--- a/src/global/scss/modules/_select.scss
+++ b/src/global/scss/modules/_select.scss
@@ -11,15 +11,19 @@
 	position: relative;
 	align-content: center;
 	font-family: var(--base-font);
+
 	-webkit-text-size-adjust: none;
 	border-radius: var(--md-radius);
 	grid-template-columns: 1fr 0.5px;
 	grid-template-areas: "select end";
+	border: 0.0625rem solid hsla(0, 0%, 66.7%, 0.219);
 	transition: all cubic-bezier(0.47, 0, 0.745, 0.715) 0.1s;
 
 	&:active,
 	&:focus-within {
 		// background: #262e38;
+		filter: brightness(1.15);
+		border: 0.25px rgb(114, 114, 114) solid;
 	}
 	&.inline {
 		max-width: 8rem;
@@ -54,9 +58,10 @@ select {
 	&:active,
 	&:focus-within {
 		// background: #262e38;
-		filter: brightness(1.5);
+		filter: brightness(1.1);
 	}
 	-webkit-text-size-adjust: auto;
+	background: inherit;
 	margin: 0;
 	width: 100%;
 	outline: none;
@@ -80,6 +85,6 @@ select {
 	border-radius: var(--md-radius);
 	font-weight: inherit !important;
 	padding: 0.2rem 2rem 0.5rem 0.5rem;
-	border: 0.0625rem solid hsla(0, 0%, 66.7%, 0.219);
+	border: none;
 	transition: all 0.1s cubic-bezier(0.47, 0, 0.745, 0.715);
 }
