[fix] YouTube update broke autoplay - FIXED [chore] removed unused assets

--- a/src/global/scss/components/_carousel-item.scss
+++ b/src/global/scss/components/_carousel-item.scss
@@ -111,7 +111,7 @@ section.item {
 		}
 		img {
 			width: 100%;
-			height: auto;
+			height: 100%;
 			aspect-ratio: inherit;
 			position: absolute;
 			object-fit: contain;
