--- a/src/global/scss/components/_player.scss
+++ b/src/global/scss/components/_player.scss
@@ -82,9 +82,11 @@
 	flex-direction: row;
 }
 .player {
-	height: 100%;
+	// height: 100%;
+	// max-height: 4.5rem;
 	z-index: auto;
 	align-items: unset;
+	// grid-area: f/f/f/f;
 	display: flex;
 	flex-direction: row;
 	// position: absolute;
