--- a/src/global/scss/base/_layout.scss
+++ b/src/global/scss/base/_layout.scss
@@ -123,6 +123,9 @@ body {
 body {
 	margin: 0;
 	overflow: hidden;
+	position: fixed;
+	height: 100%;
+	width: 100%;
 }
 .body {
 	grid-template-rows: 4rem 1fr 4.5rem;
