--- a/src/global/scss/utility/_variables.scss
+++ b/src/global/scss/utility/_variables.scss
@@ -2,9 +2,9 @@
 
 // Typography
 // $base-font-family:'Helvetica', sans-serif;
-$base-font-family: "Commissioner", sans-serif;
+$base-font-family: "CommissionerVariable", sans-serif;
 
-$secondary-font-family: "Commissioner", sans-serif;
+$secondary-font-family: "CommissionerVariable", sans-serif;
 :root {
 	--base-spacing: 12px;
 	--base-font-size: 12px;
