--- a/src/global/scss/modules/_button.scss
+++ b/src/global/scss/modules/_button.scss
@@ -9,7 +9,7 @@
 	background-color: #fffffff2 !important;
 	border: 1px solid #121212 !important;
 	border-radius: $base-border-radius;
-	font-family: 'Commissioner', sans-serif !important;
+	font-family: 'CommissionerVariable', sans-serif !important;
 	font-size: 1.2em;
 	font-weight: 500 !important;
 	text-transform: none;
