[docs] fixed CF workers deploy table

--- a/src/global/scss/modules/_button.scss
+++ b/src/global/scss/modules/_button.scss
@@ -9,7 +9,7 @@
 	background-color: #fffffff2 !important;
 	border: 1px solid #121212 !important;
 	border-radius: $base-border-radius;
-	font-family: 'CommissionerVariable', sans-serif !important;
+	font-family: "CommissionerVariable", sans-serif !important;
 	font-size: 1.2em;
 	font-weight: 500 !important;
 	text-transform: none;
@@ -125,7 +125,7 @@ button {
 	position: relative;
 	top: -0.05em;
 	left: 0.25em;
-	content: '›';
+	content: "›";
 	font-size: 1em;
 	line-height: 0;
 }
