--- a/src/global/01styles/base/_sanitize.scss
+++ b/src/global/01styles/base/_sanitize.scss
@@ -8,47 +8,47 @@
 *,
 ::before,
 ::after {
-	box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 :root {
-	/* ===== Scrollbar CSS ===== */
-	* {
-		scrollbar-gutter: 10px;
-		scrollbar-width: thin;
-		scrollbar-color: #c7c7c7 #5e5e5e2f;
-	}
+  /* ===== Scrollbar CSS ===== */
+  * {
+    scrollbar-gutter: 10px;
+    scrollbar-width: thin;
+    scrollbar-color: #c7c7c7 #5e5e5e2f;
+  }
 
-	*::-webkit-scrollbar {
-		width: 0.916667rem;
-		height: 0.916667rem;
-	}
+  *::-webkit-scrollbar {
+    width: 0.916667rem;
+    height: 0.916667rem;
+  }
 
-	*::-webkit-scrollbar-track {
-		background: #5e5e5e2f;
-		border-radius: 0.625rem;
-		height: 0.916667rem;
-		width: 100%;
-		background-clip: content-box;
-		border-radius: 10px;
-		border: transparent solid 0.0983333rem;
-	}
+  *::-webkit-scrollbar-track {
+    background: #5e5e5e2f;
+    border-radius: 0.625rem;
+    height: 0.916667rem;
+    width: 100%;
+    background-clip: content-box;
+    border-radius: 10px;
+    border: transparent solid 0.0983333rem;
+  }
 
-	*::-webkit-scrollbar-thumb {
-		background-color: #e0e0e0a8;
-		border-radius: 0.5625rem;
-		width: 0.5625rem;
-		scrollbar-width: 0.625rem;
-		border: 0.25rem solid #b8b8b800;
-		background-clip: content-box;
-	}
-	-webkit-touch-callout: none;
-	-webkit-user-select: none;
-	-khtml-user-select: none;
-	-moz-user-select: none;
-	-ms-user-select: none;
-	user-select: none;
-	-webkit-tap-highlight-color: transparent;
+  *::-webkit-scrollbar-thumb {
+    background-color: #e0e0e0a8;
+    border-radius: 0.5625rem;
+    width: 0.5625rem;
+    scrollbar-width: 0.625rem;
+    border: 0.25rem solid #b8b8b800;
+    background-clip: content-box;
+  }
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  -webkit-tap-highlight-color: transparent;
 }
 
 /**
@@ -58,8 +58,8 @@
 
 ::before,
 ::after {
-	text-decoration: inherit; /* 1 */
-	vertical-align: inherit; /* 2 */
+  text-decoration: inherit
+  vertical-align: inherit
 }
 
 /**
@@ -73,15 +73,15 @@
   */
 
 html {
-	cursor: default; /* 1 */
-	line-height: 1.5; /* 2 */
-	-moz-tab-size: 4; /* 3 */
-	tab-size: 4; /* 3 */
-	-webkit-tap-highlight-color: transparent /* 4 */;
-	-ms-text-size-adjust: 100%; /* 5 */
-	-webkit-text-size-adjust: 100%; /* 5 */
-	word-break: break-word; /* 6 */
-	scroll-behavior: smooth;
+  cursor: default
+  line-height: 1.5
+  -moz-tab-size: 4
+  tab-size: 4
+  -webkit-tap-highlight-color: transparent;
+  -ms-text-size-adjust: 100%
+  -webkit-text-size-adjust: 100%
+  word-break: break-word
+  scroll-behavior: smooth;
 }
 
 /* Sections
@@ -92,7 +92,7 @@ html {
   */
 
 body {
-	margin: 0;
+  margin: 0;
 }
 
 /**
@@ -101,8 +101,8 @@ body {
   */
 
 h1 {
-	font-size: 2em;
-	margin: 0.67em 0;
+  font-size: 2em;
+  margin: 0.67em 0;
 }
 
 /* Grouping content
@@ -117,7 +117,7 @@ dl ol,
 dl ul,
 ol dl,
 ul dl {
-	margin: 0;
+  margin: 0;
 }
 
 /**
@@ -128,7 +128,7 @@ ol ol,
 ol ul,
 ul ol,
 ul ul {
-	margin: 0;
+  margin: 0;
 }
 
 /**
@@ -137,8 +137,8 @@ ul ul {
   */
 
 hr {
-	height: 0; /* 1 */
-	overflow: visible; /* 2 */
+  height: 0
+  overflow: visible
 }
 
 /**
@@ -146,7 +146,7 @@ hr {
   */
 
 main {
-	display: block;
+  display: block;
 }
 
 /**
@@ -155,8 +155,8 @@ main {
 
 nav ol,
 nav ul {
-	list-style: none;
-	padding: 0;
+  list-style: none;
+  padding: 0;
 }
 
 /**
@@ -165,8 +165,8 @@ nav ul {
   */
 
 pre {
-	font-family: monospace, monospace; /* 1 */
-	font-size: 1em; /* 2 */
+  font-family: monospace, monospace
+  font-size: 1em
 }
 
 /* Text-level semantics
@@ -177,7 +177,7 @@ pre {
   */
 
 a {
-	background-color: transparent;
+  background-color: transparent;
 }
 
 /**
@@ -185,8 +185,8 @@ a {
   */
 
 abbr[title] {
-	text-decoration: underline;
-	text-decoration: underline dotted;
+  text-decoration: underline;
+  text-decoration: underline dotted;
 }
 
 /**
@@ -195,7 +195,7 @@ abbr[title] {
 
 b,
 strong {
-	font-weight: bolder;
+  font-weight: bolder;
 }
 
 /**
@@ -206,8 +206,8 @@ strong {
 code,
 kbd,
 samp {
-	font-family: monospace, monospace; /* 1 */
-	font-size: 1em; /* 2 */
+  font-family: monospace, monospace
+  font-size: 1em
 }
 
 /**
@@ -215,7 +215,7 @@ samp {
   */
 
 small {
-	font-size: 80%;
+  font-size: 80%;
 }
 
 /* Embedded content
@@ -231,7 +231,7 @@ iframe,
 img,
 svg,
 video {
-	vertical-align: middle;
+  vertical-align: middle;
 }
 
 /**
@@ -240,7 +240,7 @@ video {
 
 audio,
 video {
-	display: inline-block;
+  display: inline-block;
 }
 
 /**
@@ -248,8 +248,8 @@ video {
   */
 
 audio:not([controls]) {
-	display: none;
-	height: 0;
+  display: none;
+  height: 0;
 }
 
 /**
@@ -257,7 +257,7 @@ audio:not([controls]) {
   */
 
 iframe {
-	border-style: none;
+  border-style: none;
 }
 
 /**
@@ -265,7 +265,7 @@ iframe {
   */
 
 img {
-	border-style: none;
+  border-style: none;
 }
 
 /**
@@ -273,7 +273,7 @@ img {
   */
 
 svg:not([fill]) {
-	fill: currentColor;
+  fill: currentColor;
 }
 
 /**
@@ -281,7 +281,7 @@ svg:not([fill]) {
   */
 
 svg:not(:root) {
-	overflow: hidden;
+  overflow: hidden;
 }
 
 /* Tabular data
@@ -292,7 +292,7 @@ svg:not(:root) {
   */
 
 table {
-	border-collapse: collapse;
+  border-collapse: collapse;
 }
 
 /* Forms
@@ -305,7 +305,7 @@ table {
 button,
 input,
 select {
-	margin: 0;
+  margin: 0;
 }
 
 /**
@@ -314,8 +314,8 @@ select {
   */
 
 button {
-	overflow: visible; /* 1 */
-	text-transform: none; /* 2 */
+  overflow: visible
+  text-transform: none
 }
 
 /**
@@ -323,10 +323,10 @@ button {
   */
 
 button,
-[type='button'],
-[type='reset'],
-[type='submit'] {
-	-webkit-appearance: button;
+[type="button"],
+[type="reset"],
+[type="submit"] {
+  -webkit-appearance: button;
 }
 
 /**
@@ -335,8 +335,8 @@ button,
   */
 
 fieldset {
-	border: 1px solid #a0a0a0; /* 1 */
-	padding: 0.35em 0.75em 0.625em; /* 2 */
+  border: 1px solid #a0a0a0
+  padding: 0.35em 0.75em 0.625em
 }
 
 /**
@@ -344,7 +344,7 @@ fieldset {
   */
 
 input {
-	overflow: visible;
+  overflow: visible;
 }
 
 /**
@@ -353,10 +353,10 @@ input {
   */
 
 legend {
-	color: inherit; /* 2 */
-	display: table; /* 1 */
-	max-width: 100%; /* 1 */
-	white-space: normal; /* 1 */
+  color: inherit
+  display: table
+  max-width: 100%
+  white-space: normal
 }
 
 /**
@@ -365,8 +365,8 @@ legend {
   */
 
 progress {
-	display: inline-block; /* 1 */
-	vertical-align: baseline; /* 2 */
+  display: inline-block
+  vertical-align: baseline
 }
 
 /**
@@ -374,7 +374,7 @@ progress {
   */
 
 select {
-	text-transform: none;
+  text-transform: none;
 }
 
 /**
@@ -384,18 +384,18 @@ select {
   */
 
 textarea {
-	margin: 0; /* 1 */
-	overflow: auto; /* 2 */
-	resize: vertical; /* 3 */
+  margin: 0
+  overflow: auto
+  resize: vertical
 }
 
 /**
   * Remove the padding in IE 10-.
   */
 
-[type='checkbox'],
-[type='radio'] {
-	padding: 0;
+[type="checkbox"],
+[type="radio"] {
+  padding: 0;
 }
 
 /**
@@ -403,9 +403,9 @@ textarea {
   * 2. Correct the outline style in Safari.
   */
 
-[type='search'] {
-	-webkit-appearance: textfield; /* 1 */
-	outline-offset: -2px; /* 2 */
+[type="search"] {
+  -webkit-appearance: textfield
+  outline-offset: -2px
 }
 
 /**
@@ -414,7 +414,7 @@ textarea {
 
 ::-webkit-inner-spin-button,
 ::-webkit-outer-spin-button {
-	height: auto;
+  height: auto;
 }
 
 /**
@@ -422,8 +422,8 @@ textarea {
   */
 
 ::-webkit-input-placeholder {
-	color: inherit;
-	opacity: 0.54;
+  color: inherit;
+  opacity: 0.54;
 }
 
 /**
@@ -431,7 +431,7 @@ textarea {
   */
 
 ::-webkit-search-decoration {
-	-webkit-appearance: none;
+  -webkit-appearance: none;
 }
 
 /**
@@ -440,8 +440,8 @@ textarea {
   */
 
 ::-webkit-file-upload-button {
-	-webkit-appearance: button; /* 1 */
-	font: inherit; /* 2 */
+  -webkit-appearance: button
+  font: inherit
 }
 
 /**
@@ -449,8 +449,8 @@ textarea {
   */
 
 ::-moz-focus-inner {
-	border-style: none;
-	padding: 0;
+  border-style: none;
+  padding: 0;
 }
 
 /**
@@ -458,7 +458,7 @@ textarea {
   */
 
 :-moz-focusring {
-	outline: 1px dotted ButtonText;
+  outline: 1px dotted ButtonText;
 }
 
 /**
@@ -466,7 +466,7 @@ textarea {
   */
 
 :-moz-ui-invalid {
-	box-shadow: none;
+  box-shadow: none;
 }
 
 /* Interactive
@@ -477,7 +477,7 @@ textarea {
   */
 
 details {
-	display: block;
+  display: block;
 }
 
 /*
@@ -485,25 +485,25 @@ details {
   */
 
 dialog {
-	background-color: white;
-	border: solid;
-	color: black;
-	display: block;
-	height: -moz-fit-content;
-	height: -webkit-fit-content;
-	height: fit-content;
-	left: 0;
-	margin: auto;
-	padding: 1em;
-	position: absolute;
-	right: 0;
-	width: -moz-fit-content;
-	width: -webkit-fit-content;
-	width: fit-content;
+  background-color: white;
+  border: solid;
+  color: black;
+  display: block;
+  height: -moz-fit-content;
+  height: -webkit-fit-content;
+  height: fit-content;
+  left: 0;
+  margin: auto;
+  padding: 1em;
+  position: absolute;
+  right: 0;
+  width: -moz-fit-content;
+  width: -webkit-fit-content;
+  width: fit-content;
 }
 
 dialog:not([open]) {
-	display: none;
+  display: none;
 }
 
 /*
@@ -511,7 +511,7 @@ dialog:not([open]) {
   */
 
 summary {
-	display: list-item;
+  display: list-item;
 }
 
 /* Scripting
@@ -522,7 +522,7 @@ summary {
   */
 
 canvas {
-	display: inline-block;
+  display: inline-block;
 }
 
 /**
@@ -530,7 +530,7 @@ canvas {
   */
 
 template {
-	display: none;
+  display: none;
 }
 
 /* User interaction
@@ -551,8 +551,8 @@ select,
 summary,
 textarea,
 [tabindex] {
-	-ms-touch-action: manipulation; /* 1 */
-	touch-action: manipulation; /* 2 */
+  -ms-touch-action: manipulation
+  touch-action: manipulation
 }
 
 /**
@@ -560,7 +560,7 @@ textarea,
   */
 
 [hidden] {
-	display: none;
+  display: none;
 }
 
 /* Accessibility
@@ -570,8 +570,8 @@ textarea,
   * Change the cursor on busy elements in all browsers (opinionated).
   */
 
-[aria-busy='true'] {
-	cursor: progress;
+[aria-busy="true"] {
+  cursor: progress;
 }
 
 /*
@@ -579,7 +579,7 @@ textarea,
   */
 
 [aria-controls] {
-	cursor: pointer;
+  cursor: pointer;
 }
 
 /*
@@ -587,9 +587,9 @@ textarea,
   * inoperable elements in all browsers (opinionated).
   */
 
-[aria-disabled='true'],
+[aria-disabled="true"],
 [disabled] {
-	cursor: not-allowed;
+  cursor: not-allowed;
 }
 
 /*
@@ -597,11 +597,11 @@ textarea,
   * in all browsers (opinionated).
   */
 
-[aria-hidden='false'][hidden] {
-	display: initial;
+[aria-hidden="false"][hidden] {
+  display: initial;
 }
 
-[aria-hidden='false'][hidden]:not(:focus) {
-	clip: rect(0, 0, 0, 0);
-	position: absolute;
+[aria-hidden="false"][hidden]:not(:focus) {
+  clip: rect(0, 0, 0, 0);
+  position: absolute;
 }
