--- a/src/global/scss/base/_fonts.scss
+++ b/src/global/scss/base/_fonts.scss
@@ -1,6 +1,6 @@
-// @import "@fontsource/commissioner/index.css";
-// @import "@fontsource/commissioner/400.css";
-// @import "@fontsource/commissioner/500.css";
-// @import "@fontsource/commissioner/600.css";
-// @import "@fontsource/commissioner/700.css";
-@import "@fontsource/commissioner/variable.css"; // @import "@fontsource/commissioner/";
+@import "@fontsource/commissioner/index.css";
+@import "@fontsource/commissioner/400.css";
+@import "@fontsource/commissioner/500.css";
+@import "@fontsource/commissioner/600.css";
+@import "@fontsource/commissioner/700.css";
+// @import "@fontsource/commissioner/variable.css"; // @import "@fontsource/commissioner/";
