--- a/src/global/01styles/base/_layout.scss
+++ b/src/global/01styles/base/_layout.scss
@@ -55,7 +55,7 @@ body {
 	overflow: hidden;
 }
 .l-body,
-.body {
+#app {
 	grid-template-rows: 4rem auto 4rem;
 	position: fixed;
 	height: 100%;
@@ -76,7 +76,7 @@ body {
 
 @media (min-width: 640px) {
 	.l-body,
-	.body {
+	#app {
 		grid-template-areas:
 			"n n n n"
 			"s m m m"
@@ -91,7 +91,7 @@ main {
 a,
 .link {
 	transition: 120ms ease-in opacity;
-	font-family: "CommissionerVariable", sans-serif, "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+	font-family: "Commissioner", sans-serif, "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 	$color: white;
 	text-decoration: none;
 	font-weight: 100 !important;
