--- a/src/global/scss/components/_carousel-item.scss
+++ b/src/global/scss/components/_carousel-item.scss
@@ -7,11 +7,11 @@
 }
 .item1x1 {
 	// padding-top: 100% !important;
-	width: 11rem !important;
+	width: 13rem !important;
 }
 .item16x9 {
 	// padding-top: 56.25% !important;
-	width: 19rem !important;
+	width: 20rem !important;
 }
 .img1x1 {
 	// padding-top: 100% !important;
@@ -25,7 +25,6 @@
 	position: relative;
 	padding-bottom: 1.8rem;
 	padding-left: 1rem;
-	padding-top: 1rem;
 	scroll-snap-align: start;
 
 	&:last-child {
@@ -48,7 +47,7 @@
 	display: inline;
 	font-weight: 500;
 	font-size: 1.1em;
-	font-family: "CommissionerVariable", sans-serif;
+	font-family: "Commissioner", sans-serif;
 	margin-bottom: 0.25rem;
 	letter-spacing: -0.05em;
 }
@@ -59,93 +58,93 @@ section {
 	::before {
 		display: block;
 	}
-	/* You could reduce this expression with a preprocessor or by doing the math. I've kept the longer form in `calc()` to make the math more readable for this demo. */
-}
-section.item {
-	min-height: 16.75rem;
-	height: auto;
-	width: 100%;
-	min-width: 12rem;
-	max-width: 20rem;
-	position: relative;
-}
 
-.img {
-	height: auto;
-	width: 100%;
-	aspect-ratio: inherit;
-	.container {
-		position: relative; /* If you want text inside of it */
-
-		aspect-ratio: inherit;
-		cursor: pointer;
-		width: 100%;
-		position: relative;
-
-		// padding-top: 100%; /* 1:1 Aspect Ratio */
-		&::before {
-			position: absolute;
-			content: "";
-			top: 0;
-			right: 0;
-			bottom: 0;
-			left: 0;
-			background: linear-gradient(rgba(0, 0, 0, 0.502), rgba(0, 0, 0, 0), rgba(0, 0, 0, 0));
-
-			transition: background cubic-bezier(0.455, 0.03, 0.515, 0.955) 0.1s,
-				opacity cubic-bezier(0.455, 0.03, 0.515, 0.955) 0.1s;
-			opacity: 0.1;
-			z-index: 1;
-		}
-		&:hover::before {
-			// transition: all cubic-bezier(0.42, 0.16, 0.58, 0.8) 0.2s !important;
-			background: linear-gradient(rgba(0, 0, 0, 0.534), rgba(0, 0, 0, 0.11));
-			opacity: 0.7;
-			z-index: 1;
-		}
-		&:active:hover::before {
-			// transition: all cubic-bezier(0.42, 0.16, 0.58, 0.8) 0.2s !important;
-			background: linear-gradient(0.5turn, rgba(49, 49, 49, 0.534), rgba(0, 0, 0, 0.11));
-			opacity: 1;
-			z-index: 1;
-		}
-		img {
-			width: 100%;
-			height: 100%;
-			aspect-ratio: inherit;
-			position: absolute;
-			object-fit: contain;
-			// border-radius: var(--xs-radius);
-			min-width: 100%;
-			top: 0;
-			right: 0;
-			bottom: 0;
-			left: 0;
-		}
-	}
-}
-.cont {
-	margin-top: 1em;
-	// margin-right: var(--lg-spacing);
-}
-.scroll-container {
-}
-
-@media screen and (min-width: 640px) {
-	.img16x9 {
-		max-width: 23rem !important;
-	}
 	section.item {
-		max-width: 27rem;
-	}
-	.item16x9 {
-		width: 23rem !important;
+		min-height: 16.75rem;
+		height: auto;
+		width: 100%;
+		min-width: 12rem;
+		max-width: 20rem;
+		position: relative;
 	}
 
-	.img1x1 {
-		max-width: 15rem !important;
+	.img {
+		height: auto;
+		width: 100%;
+		aspect-ratio: inherit;
+		.container {
+			position: relative;
+
+			aspect-ratio: inherit;
+			cursor: pointer;
+			width: 100%;
+			position: relative;
+
+			// padding-top: 100%;
+			&::before {
+				position: absolute;
+				content: "";
+				top: 0;
+				right: 0;
+				bottom: 0;
+				left: 0;
+				background: linear-gradient(rgba(0, 0, 0, 0.502), rgba(0, 0, 0, 0), rgba(0, 0, 0, 0));
+
+				transition: background cubic-bezier(0.455, 0.03, 0.515, 0.955) 0.1s,
+					opacity cubic-bezier(0.455, 0.03, 0.515, 0.955) 0.1s;
+				opacity: 0.1;
+				z-index: 1;
+			}
+			&:hover::before {
+				// transition: all cubic-bezier(0.42, 0.16, 0.58, 0.8) 0.2s !important;
+				background: linear-gradient(rgba(0, 0, 0, 0.534), rgba(0, 0, 0, 0.11));
+				opacity: 0.7;
+				z-index: 1;
+			}
+			&:active:hover::before {
+				// transition: all cubic-bezier(0.42, 0.16, 0.58, 0.8) 0.2s !important;
+				background: linear-gradient(0.5turn, rgba(49, 49, 49, 0.534), rgba(0, 0, 0, 0.11));
+				opacity: 1;
+				z-index: 1;
+			}
+			img {
+				width: 100%;
+				height: 100%;
+				aspect-ratio: inherit;
+				position: absolute;
+				object-fit: contain;
+				// border-radius: var(--xs-radius);
+				min-width: 100%;
+				top: 0;
+				right: 0;
+				bottom: 0;
+				left: 0;
+			}
+		}
 	}
-	.item1x1 {
-		width: 15rem !important;
+	.cont {
+		margin-top: 1em;
+		// margin-right: var(--lg-spacing);
+	}
+	.scroll-container {
+	}
+
+	@media screen and (min-width: 640px) {
+		.img16x9 {
+			max-width: 23rem !important;
+		}
+		section.item {
+			max-width: 27rem;
+		}
+		.item16x9 {
+			width: 23rem !important;
+		}
+
+		.img1x1 {
+			max-width: 15rem !important;
+		}
+		.item1x1 {
+			width: 15rem !important;
+		}
 	}
 }
