--- a/src/global/scss/modules/_button.scss
+++ b/src/global/scss/modules/_button.scss
@@ -4,7 +4,7 @@
 %button-base {
 	transition: background, 75ms;
 	// display: inline-block;
-	padding: 0.5em 1em;
+	padding: 0.5rem 1rem;
 	color: #0e0e0e !important; // !important is added to colors in order to make button utility immutable.  Otherwise, it's common for `a` styles to override button specificity.
 	background-color: #fffffff2 !important;
 	border: 1px solid #121212 !important;
