--- a/src/lib/shared/listPages.scss
+++ b/src/lib/shared/listPages.scss
@@ -11,13 +11,30 @@ button {
 	display: inline-flex;
 	font-weight: 500;
 }
-
+.explicit {
+	text-shadow: none;
+	width: 1rem;
+	height: 1rem;
+	font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Open Sans, Helvetica Neue,
+		sans-serif;
+	font-size: 0.7143rem;
+	flex: none;
+	color: #000;
+	font-weight: 700;
+	filter: contrast(100%);
+	background: hsla(0, 0%, 100%, 0.966);
+	padding: 0 0.4em;
+	display: block;
+	margin-left: 0.5rem;
+	outline: #000 solid 0.1px;
+	margin-bottom: 0.7rem;
+	align-self: flex-end;
+}
 .button-group {
-	display: inline-grid;
-	grid-template-columns: 11rem;
+	display: flex;
+
 	gap: 0.5rem;
 	align-items: center;
-	max-width: 40%;
 }
 .button--outlined {
 	color: #070707 !important;
