--- a/src/global/stylesheet/components/_carousel.scss
+++ b/src/global/stylesheet/components/_carousel.scss
@@ -26,8 +26,8 @@ a small {
 		flex-direction: row;
 		flex-wrap: nowrap;
 
-		@media screen and (min-width: 800px) {
-			font-size: 2.125rem;
-		}
+		// @media screen and (min-width: 800px) {
+		// 	font-size: 2.125rem;
+		// }
 	}
 }
