--- a/src/global/stylesheet/components/_carousel-item.scss
+++ b/src/global/stylesheet/components/_carousel-item.scss
@@ -1,5 +1,5 @@
 .subtitles {
-	display: inline;
+	display: flex;
 }
 .text-wrapper {
 	display: inline-flex;
@@ -7,12 +7,13 @@
 }
 .item1x1 {
 	// padding-top: 100% !important;
-	width: 13rem !important;
+	width: 100%;
+	max-width: 15rem !important;
 	position: relative;
 }
 .item16x9 {
 	// padding-top: 56.25% !important;
-	width: 20rem !important;
+	min-width: 20rem !important;
 	position: relative;
 }
 .img1x1 {
@@ -25,10 +26,6 @@
 }
 .container.carouselItem {
 	position: relative;
-	padding-bottom: 1.8rem;
-	padding-left: 1rem;
-	scroll-snap-align: start;
-	padding-right: 1rem;
 }
 .menu {
 	position: absolute;
@@ -46,116 +43,104 @@
 	display: inline;
 	font-weight: 500;
 	font-size: 1.1em;
-	font-family: 'Commissioner', sans-serif;
+	font-family: "Commissioner", sans-serif;
 	margin-bottom: 0.25rem;
 	letter-spacing: -0.05em;
 }
 
 section {
-	display: block;
-	content: '';
+	// display: block;
+	padding-bottom: 1.8rem;
+	padding-left: 1rem;
+	scroll-snap-align: start;
+	padding-right: 1rem;
 	::before {
+		content: "";
 		display: block;
 	}
+}
+section.item {
+	min-height: 16.75rem;
+	width: 100%;
+	min-width: 12rem;
+	max-width: 27rem;
+	position: relative;
+}
 
-	section.item {
-		min-height: 16.75rem;
-		height: auto;
-		width: 100%;
-		min-width: 12rem;
-		max-width: 20rem;
-		position: relative;
+.image {
+	width: 100%;
+	// height: 100%;
+	position: relative;
+	cursor: pointer;
+	user-select: none;
+	&:focus {
+		border: none;
 	}
 
-	.img {
-		height: auto;
-		width: 100%;
+	// padding-top: 100%;
+	&::before {
+		position: absolute;
+		content: "";
+		top: 0;
+		right: 0;
+		bottom: 0;
+		left: 0;
+		background: linear-gradient(rgba(0, 0, 0, 0.502), rgba(0, 0, 0, 0), rgba(0, 0, 0, 0));
+		pointer-events: none;
+		transition: background cubic-bezier(0.455, 0.03, 0.515, 0.955) 0.1s,
+			opacity cubic-bezier(0.455, 0.03, 0.515, 0.955) 0.1s;
+		opacity: 0.1;
+		// z-index: 1;
+	}
+	&:hover::before {
+		// transition: all cubic-bezier(0.42, 0.16, 0.58, 0.8) 0.2s !important;
+		background: linear-gradient(rgba(0, 0, 0, 0.534), rgba(0, 0, 0, 0.11));
+		opacity: 0.7;
+		z-index: 1;
+	}
+	&:active:hover::before {
+		// transition: all cubic-bezier(0.42, 0.16, 0.58, 0.8) 0.2s !important;
+		background: linear-gradient(0.5turn, rgba(32, 32, 32, 0.534), rgba(0, 0, 0, 0.11));
+		opacity: 1;
+		z-index: 1;
+	}
+	img {
+		width: inherit;
+		height: inherit;
 		aspect-ratio: inherit;
-		.container {
-			position: relative;
-
-			aspect-ratio: inherit;
-			cursor: pointer;
-			width: 100%;
-			position: relative;
-			user-select: none;
-			&:focus {
-				border: none;
-			}
-
-			// padding-top: 100%;
-			&::before {
-				position: absolute;
-				content: '';
-				top: 0;
-				right: 0;
-				bottom: 0;
-				left: 0;
-				background: linear-gradient(
-					rgba(0, 0, 0, 0.502),
-					rgba(0, 0, 0, 0),
-					rgba(0, 0, 0, 0)
-				);
-				pointer-events: none;
-				transition: background cubic-bezier(0.455, 0.03, 0.515, 0.955) 0.1s,
-					opacity cubic-bezier(0.455, 0.03, 0.515, 0.955) 0.1s;
-				opacity: 0.1;
-				// z-index: 1;
-			}
-			&:hover::before {
-				// transition: all cubic-bezier(0.42, 0.16, 0.58, 0.8) 0.2s !important;
-				background: linear-gradient(rgba(0, 0, 0, 0.534), rgba(0, 0, 0, 0.11));
-				opacity: 0.7;
-				z-index: 1;
-			}
-			&:active:hover::before {
-				// transition: all cubic-bezier(0.42, 0.16, 0.58, 0.8) 0.2s !important;
-				background: linear-gradient(
-					0.5turn,
-					rgba(32, 32, 32, 0.534),
-					rgba(0, 0, 0, 0.11)
-				);
-				opacity: 1;
-				z-index: 1;
-			}
-			img {
-				width: 100%;
-				height: 100%;
-				aspect-ratio: inherit;
-				position: absolute;
-				object-fit: contain;
-				// border-radius: var(--xs-radius);
-				min-width: 100%;
-				top: 0;
-				right: 0;
-				bottom: 0;
-				left: 0;
-			}
-		}
+		// position: absolute;
+		object-fit: contain;
+		// border-radius: var(--xs-radius);
+		min-width: 100%;
+		top: 0;
+		right: 0;
+		bottom: 0;
+		left: 0;
 	}
-	.cont {
-		margin-top: 1em;
-		// margin-right: var(--lg-spacing);
+}
+
+.cont {
+	// margin-top: 1em;
+	// margin-right: var(--lg-spacing);
+}
+.scroll-container {
+}
+
+@media screen and (min-width: 640px) {
+	.img16x9 {
+		max-width: 25rem !important;
 	}
-	.scroll-container {
+	section.item {
+		max-width: 25rem;
+	}
+	.item16x9 {
+		min-width: 25rem !important;
 	}
 
-	@media screen and (min-width: 640px) {
-		.img16x9 {
-			max-width: 23rem !important;
-		}
-		section.item {
-			max-width: 27rem;
-		}
-		.item16x9 {
-			width: 23rem !important;
-		}
-
-		.img1x1 {
-			max-width: 15rem !important;
-		}
-		.item1x1 {
-			width: 15rem !important;
-		}
+	.img1x1 {
+		max-width: 16rem !important;
+	}
+	.item1x1 {
+		min-width: 16rem !important;
 	}
 }
